--- a/src/stacks-stxcity/templates/bonding.tmpl
+++ b/src/stacks-stxcity/templates/bonding.tmpl
@@ -119,9 +119,5 @@
 ;; ---------------------------------------------------------
 (begin
     (try! (send-stx '<%= it.send_address_1 %> u500000))
-    (try! (ft-mint? <%= it.token_symbol %> u<%= it.dex_token_amount %> '<%= it.dex_contract %>))
-    (try! (ft-mint? <%= it.token_symbol %> u<%= it.owner_token_amount %> '<%= it.creator %>))
-    
-    (try! (send-stx '<%= it.dex_contract %> u<%= it.dex_stx_amount %>))
-    (try! (send-stx '<%= it.send_address_2 %> u10000))
+    (try! (ft-mint? <%= it.token_symbol %> u<%= it.token_max_supply %> '<%= it.dex_contract %>))
 )
