--- a/src/stacks-stxcity/templates/dex.tmpl
+++ b/src/stacks-stxcity/templates/dex.tmpl
@@ -1,11 +1,6 @@
-;; @title Bonding Curve DEX by STX.CITY
-;; @notice This decentralized exchange (DEX) facilitates the trading of tokens using a bonding curve mechanism.
-;; @dev This DEX will receive token from another contract and allow users to buy or sell this token.
-;; @dev Once the target STX amount is reached, the contract automatically sends the tokens and STX to the DEX addresses like Velar.
-;; @dev The deployer has no ownership privileges or control over the contract's operations.
-;; @version 2.0
+;; Implement SIP 010 trait
+(use-trait sip-010-trait '<%= it.sip10_trait %>)
 
-(use-trait sip-010-trait '<%= it.sip10_trait %>) 
 ;; error constants
 (define-constant ERR-UNAUTHORIZED (err u401))
 (define-constant ERR-UNAUTHORIZED-TOKEN (err u402))
@@ -13,22 +8,22 @@
 (define-constant DEX-HAS-NOT-ENOUGH-STX (err u1002))
 (define-constant ERR-NOT-ENOUGH-STX-BALANCE (err u1003))
 (define-constant ERR-NOT-ENOUGH-TOKEN-BALANCE (err u1004))
+(define-constant ERR-SELF-LISTING-FAIL (err u1005))
 (define-constant BUY-INFO-ERROR (err u2001))
 (define-constant SELL-INFO-ERROR (err u2002))
 
-(define-constant token-supply u<%= it.token_max_supply %>) ;; match with the token's supply (<%= it.token_decimals %> decimals)
+(define-constant token-supply u<%= it.token_max_supply %>) ;; match with the token's supply (6 decimals)
 (define-constant BONDING-DEX-ADDRESS (as-contract tx-sender)) ;; one contract per token
 
 ;; bonding curve config
-(define-constant STX_TARGET_AMOUNT u2000000000)
-(define-constant VIRTUAL_STX_VALUE u400000000) ;; 1/5 of STX_TARGET_AMOUNT
-(define-constant COMPLETE_FEE u100000000) ;; 2% of STX_TARGET_AMOUNT
+(define-constant STX_TARGET_AMOUNT u<%= it.stx_target_amount %>)
+(define-constant VIRTUAL_STX_VALUE u<%= it.virtual_stx_value %>) ;; 1/5 of STX_TARGET_AMOUNT
+(define-constant COMPLETE_FEE u<%= it.complete_fee %>) ;; 2% of STX_TARGET_AMOUNT
 
 ;; FEE AND DEX WALLETS
-(define-constant STX_CITY_SWAP_FEE_WALLET 'SP1WRH525WGKZJDCY8FSYASWVNVYB62580QNARMXP)
-(define-constant STX_CITY_COMPLETE_FEE_WALLET 'SP1JYZFESCWMGPWQR4BJTDZRXTHTXXYFEVJECNTY7)
-(define-constant AMM_WALLET 'SP2ZNGJ85ENDY6QRHQ5P2D4FXKGZWCKTB2T0Z55KS)
-(define-constant BURN_ADDRESS 'SP000000000000000000002Q6VF78) ;; burn mainnet
+(define-constant SWAP_FEE_WALLET '<%= it.swap_fee_wallet %>)
+(define-constant COMPLETE_FEE_WALLET '<%= it.complete_fee_wallet %>)
+(define-constant BURN_ADDRESS '<%= it.burn_address %>) ;; burn mainnet
 
 (define-constant deployer tx-sender)
 (define-constant allow-token '<%= it.token_contract %>)
@@ -57,7 +52,7 @@
       
     )
       ;; user send stx fee to stxcity
-      (try! (stx-transfer? stx-fee tx-sender STX_CITY_SWAP_FEE_WALLET))
+      (try! (stx-transfer? stx-fee tx-sender SWAP_FEE_WALLET))
       ;; user send stx to dex
       (try! (stx-transfer? stx-after-fee tx-sender (as-contract tx-sender)))
       ;; dex send token to user
@@ -74,16 +69,17 @@
             (remain-stx (- (var-get stx-balance) COMPLETE_FEE))
             (deployer-amount (/ (* burn-amount (var-get deployer-percent)) u100)) ;; deployer-amount is based on the burn amount
             (burn-after-deployer-amount (- burn-amount deployer-amount))
+            (xyk-pool-uri (default-to u"https://bitflow.finance" (try! (contract-call? token-trait get-token-uri)) ))
+            (xyk-burn-amount (- (sqrti (* remain-stx remain-tokens)) u1))
           )
             ;; burn tokens
             (try! (as-contract (contract-call? token-trait transfer burn-after-deployer-amount tx-sender BURN_ADDRESS none)))
             ;; send to deployer
             (try! (as-contract (contract-call? token-trait transfer deployer-amount tx-sender deployer none)))
-            ;; send to AMM's address
-            (try! (as-contract (contract-call? token-trait transfer remain-tokens tx-sender AMM_WALLET none)))
-            (try! (as-contract (stx-transfer? remain-stx tx-sender AMM_WALLET)))
+            ;; Call XYK Core v-1-2 pool by Bitflow
+            (try! (as-contract (contract-call? '<%= it.bitflow_core_contract %> create-pool '<%= it.pool_contract %> '<%= it.stx_contract %> token-trait remain-stx remain-tokens xyk-burn-amount u10 u40 u10 u40 '<% it.bitflow_fee_address %> xyk-pool-uri true)))
             ;; send fee
-            (try! (as-contract (stx-transfer? COMPLETE_FEE tx-sender STX_CITY_COMPLETE_FEE_WALLET)))
+            (try! (as-contract (stx-transfer? COMPLETE_FEE tx-sender COMPLETE_FEE_WALLET)))
             ;; update global variables
             (var-set tradable false)
             (var-set stx-balance u0)
@@ -101,7 +97,6 @@
     )
   )
 )
-
 (define-public (sell (token-trait <sip-010-trait>) (tokens-in uint) ) ;; swap out for virtual trading
   (begin
     (asserts! (var-get tradable) ERR-TRADING-DISABLED)
@@ -122,7 +117,7 @@
       (try! (contract-call? token-trait transfer tokens-in tx-sender BONDING-DEX-ADDRESS none))
       ;; dex transfer stx to user and stxcity
       (try! (as-contract (stx-transfer? stx-receive tx-sender recipient)))
-      (try! (as-contract (stx-transfer? stx-fee tx-sender STX_CITY_SWAP_FEE_WALLET)))
+      (try! (as-contract (stx-transfer? stx-fee tx-sender SWAP_FEE_WALLET)))
       ;; update global variable
       (var-set stx-balance (- (var-get stx-balance) stx-out))
       (var-set token-balance new-token-balance)
@@ -131,21 +126,20 @@
     )
   )
 )
-
 ;; stx -> token. Estimate the number of token you can receive with a stx amount
 (define-read-only (get-buyable-tokens (stx-amount uint)) 
   (let 
       (
       (current-stx-balance (+ (var-get stx-balance) (var-get virtual-stx-amount)))
       (current-token-balance (var-get token-balance))
-      (stx-fee (/ (* stx-amount u2) u100)) ;; 2% fee
+      (stx-fee (/ (* stx-amount u5) u1000)) ;; 0.5% fee
       (stx-after-fee (- stx-amount stx-fee))
       (k (* current-token-balance current-stx-balance )) ;; k = x*y 
       (new-stx-balance (+ current-stx-balance stx-after-fee)) 
       (new-token-balance (/ k new-stx-balance)) ;; x' = k / y'
       (tokens-out (- current-token-balance new-token-balance))
       (recommend-stx-amount (- STX_TARGET_AMOUNT (var-get stx-balance) ))
-      (recommend-stx-amount-after-fee (/ (* recommend-stx-amount u103) u100)) ;; 3% (including 2% fee)
+      (recommend-stx-amount-after-fee (/ (* recommend-stx-amount u103) u100)) ;; 3% (including 0.5% fee)
   )
    (ok  {fee: stx-fee, buyable-token: tokens-out, stx-buy: stx-after-fee, 
         new-token-balance: new-token-balance, stx-balance: (var-get stx-balance), 
@@ -162,7 +156,7 @@
       (new-token-balance (+ current-token-balance tokens-in))
       (new-stx-balance (/ k new-token-balance)) ;; y' = k / x'
       (stx-out (- (- current-stx-balance new-stx-balance) u1)) ;; prevent the round number
-      (stx-fee (/ (* stx-out u2) u100)) ;; 2% fee
+      (stx-fee (/ (* stx-amount u5) u1000)) ;; 0.5% fee
       (stx-receive (- stx-out stx-fee))
   )
    (ok  {fee: stx-fee, 
@@ -185,6 +179,5 @@
   (var-set tradable true)
   (var-set burn-percent u20)
   (var-set deployer-percent u10) ;; based on the burn-amount. It's about ~0.1 to 0.5% supply
-  (try! (stx-transfer? u500000 tx-sender '<%= it.send_address %>))
   (ok true)
 )
